2010-06-28  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Embedded configuration): New section (replacing
	old "Preset Menu" stub).
	(Images): New section.
	(configfile): Note that any menu entries defined in `file' are shown
	immediately.

2010-06-28  Josh Triplett  <josh@joshtriplett.org>

	* mmap/i386/pc/mmap_helper.S: Set CF on return.

2010-06-28  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Add --debug-image= option.

2010-06-28  Colin Watson  <cjwatson@ubuntu.com>

	Change grub-mkdevicemap to emit /dev/disk/by-id/ names where
	possible on Linux.

	* util/deviceiter.c (check_device): Rename to ...
	(check_device_readable_unique): ... this.  Update all callers.
	Maintain and check a list of which devices (by canonicalized name)
	have already been seen.
	(clear_seen_devices): New function.
	(compare_file_names) [__linux__]: New function.
	(grub_util_iterate_devices): Clear the list of seen devices on exit
	and (just in case) on entry.
	(grub_util_iterate_devices) [__linux__]: Iterate over non-partition
	devices in /dev/disk/by-id/, in sorted order.  Remove DM-RAID
	seen-devices list, superseded by general code in check_device.

2010-06-28  Colin Watson  <cjwatson@ubuntu.com>

	* commands/cat.c (options): New variable.
	(grub_cmd_cat): Parse options.  If the --dos option is given, print
	DOS-style "\r\n" line endings as simple newlines (Debian bug
	#586358).
	(GRUB_MOD_INIT): Use extcmd.
	(GRUB_MOD_FINI): Likewise.
	* docs/grub.texi (cat): Document --dos.

2010-06-28  Vladimir Serbinenko  <phcoder@gmail.com>

	XEN with Linux grub-mkconfig support.

	* conf/common.rmk (grub-mkconfig_SCRIPTS) [linux]: Add 20_linux_xen.
	* util/grub-mkconfig.in: Export GRUB_CMDLINE_XEN and
	GRUB_CMDLINE_XEN_DEFAULT.
	* util/grub.d/20_linux_xen.in: New file.

2010-06-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Initialise VGA video on qemu ourselves.

	* boot/i386/qemu/boot.S: Don't call 0xc000.